--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   profiles:
-    active: dev
+    active: default
   application:
     name: employee-filter-service
 
@@ -24,13 +24,9 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://192.168.0.101:3306/onlinedatabuilder
-#    username: istiyak
-#    password: live@Bottomhalf_001
-
-    url: jdbc:mysql://localhost:3306/onlinedatabuilder
-    username: root
-    password: istiyak@mi9
+    url: jdbc:mysql://192.168.0.101:3306/onlinedatabuilder
+    username: istiyak
+    password: live@Bottomhalf_001
 
 ---
 spring:
