--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   profiles:
-    active: default
+    active: ${profile:prod}
   application:
     name: employee-filter-service
 
@@ -12,38 +12,6 @@ spring:
     kubernetes:
       discovery:
         all-namespaces: true
-
-
-
----
-spring:
-  config:
-    activate:
-      on-profile: default
-    import: optional:configserver:http://localhost:8083
-
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.0.101:3306/onlinedatabuilder
-    username: istiyak
-    password: live@Bottomhalf_001
-
----
-spring:
-  config:
-    activate:
-      on-profile: dev
-    import: optional:configserver:http://configserver-service:8083
-
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://194.233.76.48:3306/onlinedatabuilder
-    username: istiyak
-    password: live@Bottomhalf_011
-
-eureka:
-  client:
-    enabled: false
 
 ---
 
