attendance added for payroll

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,11 +5,17 @@ spring:
   config:
     import: optional:configserver:http://localhost:8083
 
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://192.168.0.101:3306/onlinedatabuilder
+#    username: istiyak
+#    password: live@Bottomhalf_001
+
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.0.101:3306/onlinedatabuilder
+    driver: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://194.233.76.48:3306/ems_master
     username: istiyak
-    password: live@Bottomhalf_001
+    password: live@Bottomhalf_011
 
 eureka:
   client:
